traces/bug_773.txt
src/femlib/Mesh3dn.cpp:1577: error: DEAD_STORE
  The value written to &lmx (type double) is never used.
Showing all 1 steps of the trace


src/femlib/Mesh3dn.cpp:1577:35: Write of unused value
1575.           if (lmx<lambda[1])  jj=1, lmx=lambda[1];
1576.           if (lmx<lambda[2])  jj=2, lmx=lambda[2];
1577.           if (lmx<lambda[3])  jj=3, lmx=lambda[3];
                                          ^
1578.           if(lambda[0]<eps) lambda[jj] += lambda[0],lambda[0]=0,kk+=1;
1579.           if(lambda[1]<eps) lambda[jj] += lambda[1],lambda[1]=0,kk+=2;
